--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
                 <div class="col-main col-12 col-lg-8 pe-lg-4">
 
                   <!-- summary -->
-                  {% include resume.html %}
+                  {% include summary.html %}
                   <hr>
 
                   <section class="resume-experience-section resume-section">
