--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -3,7 +3,7 @@
     <ul class="social-list list-inline mx-auto">
       {% for item in site.data.social%}
       <li class="list-inline-item me-0 me-md-1 me-lg-2">
-        <a href="{{ item.url }}" target="_blank" title="{{ item.title }}">
+        <a href="{{ item.url }}" target="_blank" title="{{ item.name }}">
           <i class="{{ item.icon }}"></i>
         </a>
       </li>
