--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -1,6 +1,6 @@
 <section class="resume-experience-section resume-section">
   <h3 class="resume-section-heading text-uppercase py-2 py-lg-3 py-3">
-    <i class="resume-section-heading-icon bi bi-briefcase me-2"></i>
+    <i class="resume-section-heading-icon bi bi-file-text me-2"></i>
     Publications
   </h3>
   <p>
