--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,28 +57,12 @@
 
                 <div class="col-12 col-lg-4 ps-lg-4">
 
+                  <!-- software section -->
                   {% include software.html %}
-
                   <hr>
 
-                  <section class="resume-projects-section resume-section">
-                    <h3 class="resume-section-heading text-uppercase py-2 py-lg-3 py-3"><i class="resume-section-heading-icon bi bi-code-slash me-2"></i>Projects</h3>
-                    <div class="item">
-                      <h4 class="item-heading"><i class="item-icon bi bi-square-fill me-2"></i><a href="#">Project lorem Ipsum</a></h4>
-                      <div class="item-desc">
-                        Project desc goes here aenean ut libero sit amet ante fermentum scelerisque non a leo.
-                      </div>
-                    </div><!--//item-->
-                    <div class="item">
-                      <h4 class="item-heading"><i class="item-icon bi bi-square-fill me-2"></i><a href="#">Volutpat App</a></h4>
-                      <div class="item-desc">
-                        You can link to your project Github page.
-                      </div>
-                    </div><!--//item-->
-
-
-                  </section>
-
+                  <!-- projects section -->
+                  {% include projects.html %}
                   <hr>
 
                   <section class="resume-educate-section resume-section">
@@ -96,46 +80,6 @@
                         </li>
                       </ul>
                   </section><!--//resume-section-->
-
-                  <hr>
-
-                  <section class="resume-lang-section resume-section">
-                    <h3 class="resume-section-heading text-uppercase py-2 py-lg-3 py-3"><i class="resume-section-heading-icon bi bi-translate me-2"></i>Languages</h3>
-                     <ul class="list-unstyled resume-lang-list">
-                        <li class="mb-2">
-                            <div class="resume-lang-name">English</div>
-                            <div class="resume-level-indicator row gx-0 flex-nowrap">
-                              <div class="col"><span class="item item-full"></span></div>
-                              <div class="col"><span class="item item-full"></span></div>
-                              <div class="col"><span class="item item-full"></span></div>
-                              <div class="col"><span class="item item-full"></span></div>
-                              <div class="col"><span class="item item-full"></span></div>
-                              <div class="col"><span class="item item-full"></span></div>
-                              <div class="col"><span class="item item-full"></span></div>
-                              <div class="col"><span class="item item-full"></span></div>
-                              <div class="col"><span class="item item-full"></span></div>
-                              <div class="col"><span class="item item-half"></span></div>
-                            </div><!--//resume-level-indicator-->
-                        </li>
-                         <li class="mb-2">
-                            <div class="resume-lang-name">Spanish</div>
-                            <div class="resume-level-indicator row gx-0 flex-nowrap">
-                              <div class="col"><span class="item item-full"></span></div>
-                              <div class="col"><span class="item item-full"></span></div>
-                              <div class="col"><span class="item item-full"></span></div>
-                              <div class="col"><span class="item item-full"></span></div>
-                              <div class="col"><span class="item item-full"></span></div>
-                              <div class="col"><span class="item item-full"></span></div>
-                              <div class="col"><span class="item item-full"></span></div>
-                              <div class="col"><span class="item item-full"></span></div>
-                              <div class="col"><span class="item item-half"></span></div>
-                              <div class="col"><span class="item"></span></div>
-                            </div><!--//resume-level-indicator-->
-                        </li>
-                    </ul>
-                  </section>
-
-
 
                 </div><!--//col-side-->
               </div><!--//row-->
