--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,12 @@
                   {% include summary.html %}
                   <hr>
 
+                  <!-- publications -->
                   {% include publications.html %}
+                  <hr>
+
+                  <!-- service -->
+                  {% include service.html %}
                 </div><!--//col-8-->
 
                 <div class="col-12 col-lg-4 ps-lg-4">
@@ -65,8 +70,8 @@
                   {% include projects.html %}
                   <hr>
 
-                  <!-- responsabilities section -->
-                  {% include responsabilities.html %}
+                  <!-- responsibilities section -->
+                  {% include responsibilities.html %}
 
                 </div><!--//col-side-->
               </div><!--//row-->
