fix: add sentence to introduce the projects

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,6 +3,10 @@
     <i class="resume-section-heading-icon bi bi-code-slash me-2"></i>
     Projects
   </h3>
+  <p>
+    I have been the <strong>principal investigator</strong> of the following
+    projects:
+  </p>
   {% assign projects = site.data.projects | sort: 'year' | reverse %} {% for
   item in projects %}
   <div class="item">
