update research group

--- a/_includes/summary.html
+++ b/_includes/summary.html
@@ -7,11 +7,10 @@
     <p>
       I am a
       <a href="https://www.cnrs.fr/fr" target="_blank"><strong>CNRS</strong></a>
-      research engineer working for the <strong>LoVe</strong> research group of
-      <a href="https://lipn.univ-paris13.fr/" target="_blank"
-        ><strong>LIPN</strong></a
-      >
-      at
+       research engineer working for
+      the <a href="https://lipn.univ-paris13.fr/safer/" target="_blank"><strong>SAFER</strong></a>
+       research group of <a href="https://lipn.univ-paris13.fr/" target="_blank"><strong>LIPN</strong></a>
+       at
       <a href="https://www.univ-spn.fr/" target="_blank"
         ><strong>Université Sorbonne Paris Nord</strong></a
       >. I did my Ph.D under the supervision of
